# Python_Basico

./: AA-02.ipynb  README.md  Rev-04.ipynb
Avaliacao/: notebook.ipynb
Avaliacao/p1/: __main__.py  exemplo.py
Avaliacao/p2/: __main__.py
Avaliacao/p3/: __main__.py
Avaliação/: AA-02.ipynb
Docs/: tutorial.md
Gabriel/Avaliação/: AA-01.ipynb
Gabriel/P008/: P008.ipynb
Gabriel/P009/: IP-P009.ipynb
Gabriel/P010/: IP-P010.ipynb  listaFakerP010.csv
Girleide/: DadosAluno.csv
Girleide/AA03/: AA-03.ipynb  teste.ipynb  teste.py
Girleide/AA03/metereologico_V3/: pyproject.toml
Girleide/AA03/metereologico_V3/metereologico/: __init__.py  __main__.py  _buscaDados.py  _downloadDados.py  _graficos.py  _interface.py
Girleide/P001/: Exercício2.md  __main__.py
Girleide/P003/: __main__.py
Girleide/P004/: TesteFunções.ipynb  teste.ipynb
Girleide/P005/: Lista5.ipynb
Girleide/P006/: __main__.py
Girleide/P007/: Prática7.ipynb
Girleide/P008/: Prática8.ipynb
Girleide/P009/: Prática9.ipynb
Girleide/P010/: IP-P010.ipynb
Girleide/ProvaGrupo1/: AA-02.ipynb
Girleide/Rev3/: Projecao.ipynb
Leane/Avaliacao_2/: AA-03.ipynb
Leane/P001/: Tutorial.txt  __main__.py
Leane/P002/: testeTimeit.ipynb
Leane/P003/: teste.ipynb
Leane/P004/: __main__.py  teste.ipynb
P002/: teste.ipynb
P003/: __main__.py  teste.ipynb
P005/: P005.ipynb
P009/: INMET_CO_DF_A001_BRASILIA_01-01-2003_A_31-12-2003.CSV  INMET_CO_DF_A001_BRASILIA_01-01-2013_A_31-12-2013.CSV  INMET_CO_DF_A001_BRASILIA_01-01-2023_A_31-12-2023.CSV  arq.ipynb
teste/: atv.py  exemplo.py
(+125 files in other folders)
