[tool.poetry]
name = "metereologico"
version = "0.1.0"
description = ""
authors = ["girleide <girleide.macario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

